# Securing-IOT-Device-Data-using-Light-Weight-Cryptography--ASCOn

./: README.md  platformio.ini
ascon_decrypt/: CMakeLists.txt
ascon_decrypt/src/: api.h  ascon.h  ascon_hash.h  crow_all.h  crypto_aead.h  decrypt_util.cpp  decrypt_util.h  main.cpp  word.h
ascon_decrypt_civetweb/: ascon_hash.c  ascon_hash.h  civetweb.c  crypto_aead.h  main.cpp  permutations.h  printstate.c  printstate.h  round.h
lib/Ascon128/: aead.c  ascon128_wrapper.h  constants.h
src/: main.cpp
